feat: Implement CORS configuration and update JWT secret key.

--- a/src/Api.KapiDunyasi.WebAPI/appsettings.json
+++ b/src/Api.KapiDunyasi.WebAPI/appsettings.json
@@ -11,7 +11,7 @@
   "Jwt": {
     "Issuer": "kapidunyasi",
     "Audience": "kapidunyasi",
-    "Key": "CHANGE_ME_SUPER_SECRET_KEY_32_CHARS_MIN",
+    "Key": "KapiDunyasi_JWT_2026!9xA#QmR7ZL2S5E4T8WcH@",
     "ExpiresMinutes": 120
   },
   "AdminUser": {
